Add css stylesheet and header section in index.html

--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Bees</title>
 </head>
 <body>
-    <h1>West Cork Bees</h1>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="courses.html">Courses</a>
-            </li>
-            <li>
-                <a href="shop.html">Shop</a>
-            </li>
-        </ul>
-    </nav>
+    <section id="hero">
+        <h1>West Cork Bees</h1>
+        <nav>
+            <ul id="navbar">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="courses.html">Courses</a>
+                </li>
+                <li>
+                    <a href="shop.html">Shop</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
 </body>
 </html>
