Add nav bar and styling to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header id="hero">
-        <div>
+        <div id="header-dark">
             <h1>West Cork Bees</h1>
             <nav>
                 <ul id="navbar">
@@ -29,7 +29,7 @@
         </div>
     </header>
 
-    <!-- Main Contect-->
+    <!-- Main Content-->
     <main>
         <section id="why">
             <h2>Why Be a Beekeeper?</h2>
