Add invitation sections and new course.html page

--- a/courses.html
+++ b/courses.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <header id="hero">
-        <div>
+        <div id="header-dark">
             <h1>West Cork Bees</h1>
             <nav>
                 <ul id="navbar">
                     <li>
-                        <a href="index.html">About Us</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="courses.html">Courses</a>
+                        <a class='active' href="courses.html">Courses</a>
                     </li>
                     <li>
                         <a href="shop.html">Shop</a>
@@ -29,7 +29,7 @@
         </div>
     </header>
 
-    <!-- Main Contect-->
+    <!-- Main Content-->
     <main>
         <section id="why">
             <h2>Why Be a Beekeeper?</h2>
@@ -37,19 +37,19 @@
             <h3>1. Connection with Nature</h3>
                 <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, 
                     and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding experience.</p>
-                <img class="paragraph-images" src="assets/images/bees-lavender.jpg" width="100%" alt="Two bees gathering pollen from purple flowers"/>
+                <img class="paragraph-images" src="assets/images/bees-hive.jpg" alt="Numerous bees entering a green wooden beehive."/>
             <h3>2. Honey Production</h3>
                 <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own honey is not only a delicious reward for your efforts but can
                      also be a source of potential income or a unique gift for friends and family.</p>
-                <img class="paragraph-images" src="assets/images/honeycomb.jpg" width="100%" alt="A closeup of honeycomb full of honey"/>
+                <img class="paragraph-images" src="assets/images/honeycomb.jpg" alt="A closeup of honeycomb full of honey"/>
             <h3>3. Positive Environmental Impact</h3>
                 <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and flowers. By becoming a beekeeper, you actively participate in 
                     supporting local ecosystems and agriculture. Healthy bee populations are essential for biodiversity and food production.</p>
-                <img class="paragraph-images" src="assets/images/single-beekeeper.jpg" width="100%" alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
-            <h3>4. Connection with Nature</h3>
-                <p>Relaxation and Stress Relief: Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention 
+                    <img class="paragraph-images" src="assets/images/bees-lavender.jpg" alt="Two bees gathering pollen from purple flowers"/>
+            <h3>4. Relaxation and Stress Relief</h3>
+                <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention 
                     required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                <img class="paragraph-images" src="assets/images/three-beekeepers.jpg" width="100%" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
+                    <img class="paragraph-images" src="assets/images/single-beekeeper.jpg" alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
             <h3>But...</h3>
                 <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and 
                     potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
