--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul id="navbar">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a class='active' href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="courses.html">Courses</a>
@@ -37,43 +37,24 @@
                 Since 2002, we have been cultivating and caring for a large number of hives and working towards protecting the native Irish honey bee in our area. Beyond the honey jars, we're
                 committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve into the intricate world of bees, appreciating the harmony they bring to our 
                 environment and fostering a sustainable connection with nature.</p>
+                <img class="paragraph-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
         </section>
         <hr>
         <section id="short-descriptions">
             <div class="invite">
-
+                <h3>Beekeeping Courses</h3>
+                <img src="assets/images/beekpeer-hive-rack.jpg" alt="Two beekeepers working together over a beehive." class="invitation-images">
+                <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by enrolling in our immersive course. 
+                    <span class='mobile'>Tap the image above to learn more.</span></p>                
             </div>
             <div class="invite">
-                <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by enrolling in our immersive course.</p>
-                <img src="assets/images/two-beekeepers.jpg" alt="Two beekeepers working together over a beehive." class="invitation-images">
-            </div>
-            <div class="invite">
-
+                <h3>Local Honey</h3>
+                <img src="assets/images/honey-jars.jpg" alt="Shelves of golden honey in labelled jars." class="invitation-images">
+                <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of liquid gold and experience the pure, rich flavors captured 
+                    by our passionate beekeeping team. <span class='mobile'>Tap the image above to learn more.</span></p>
             </div>
         </section>
-        <section id="why">
-            <h2>Why Be a Beekeeper?</h2>
-                <p>Becoming a beekeeper can be a rewarding and fascinating endeavor. Here are some compelling reasons to consider taking up beekeeping:</p>
-            <h3>1. Connection with Nature</h3>
-                <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, 
-                    and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding experience.</p>
-                <img class="paragraph-images" src="assets/images/bees-lavender.jpg" alt="Two bees gathering pollen from purple flowers"/>
-            <h3>2. Honey Production</h3>
-                <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own honey is not only a delicious reward for your efforts but can
-                     also be a source of potential income or a unique gift for friends and family.</p>
-                <img class="paragraph-images" src="assets/images/honeycomb.jpg" alt="A closeup of honeycomb full of honey"/>
-            <h3>3. Positive Environmental Impact</h3>
-                <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and flowers. By becoming a beekeeper, you actively participate in 
-                    supporting local ecosystems and agriculture. Healthy bee populations are essential for biodiversity and food production.</p>
-                <img class="paragraph-images" src="assets/images/single-beekeeper.jpg" alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
-            <h3>4. Connection with Nature</h3>
-                <p>Relaxation and Stress Relief: Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention 
-                    required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                <img class="paragraph-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
-            <h3>But...</h3>
-                <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and 
-                    potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
-        </section>
+        
     </main>
 
     <!-- Footer Content -->
