Add reponsive css to about us section for tablets

--- a/courses.html
+++ b/courses.html
@@ -54,6 +54,9 @@
                 <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and 
                     potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
         </section>
+        <section>
+            <h2>Sign Up for a Beekeeping Course!</h2>
+        </section>
     </main>
 
     <!-- Footer Content -->
