Add responsive CSS for invite sections on tablets

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <section id="short-descriptions">
             <div class="invite">
                 <h3>Beekeeping Courses</h3>
-                <img src="assets/images/beekpeer-hive-rack.jpg" alt="Two beekeepers working together over a beehive." class="invitation-images">
+                <a href="courses.html"><img src="assets/images/beekpeer-hive-rack.jpg" alt="Two beekeepers working together over a beehive." class="invitation-images"></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by enrolling in our immersive course. 
                     <span class='mobile'>Tap the image above to learn more.</span></p>                
             </div>
             <div class="invite">
                 <h3>Local Honey</h3>
-                <img src="assets/images/honey-jars.jpg" alt="Shelves of golden honey in labelled jars." class="invitation-images">
+                <a href="shop.html"><img src="assets/images/honey-jars.jpg" alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of liquid gold and experience the pure, rich flavors captured 
                     by our passionate beekeeping team. <span class='mobile'>Tap the image above to learn more.</span></p>
             </div>
