Fix margins of elements to be visually pleasing

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     </li>
                 </ul>
             </nav>
-            <h1>West Cork Bees</h1>
+            <h1>West Cork Beekeeping</h1>
         </div>
     </header>
 
     <!-- Main Content-->
     <main>
         <section id="about-us">
-            <h2>About Us</h2>
+            <h2>Welcome to West Cork Beekeeping!</h2>
             <div>
                 <p>Nestled in the rolling hills of West Cork, our group of dedicated beekeepers have worked together over the last two decades to establish a thriving beekeeping community. 
                     Since 2002, we have been cultivating and caring for a large number of hives and working towards protecting the native Irish honey bee in our area. Beyond the honey jars, we're
@@ -49,6 +49,7 @@
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by enrolling in our immersive course. 
                     <span class='mobile'>Tap the image above to learn more.</span></p>                
             </div>
+            <hr>
             <div class="invite">
                 <h3>Local Honey</h3>
                 <a href="shop.html"><img src="assets/images/honey-jars.jpg" alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
