Add h2 and p content to courses.html

--- a/courses.html
+++ b/courses.html
@@ -31,8 +31,41 @@
 
     <!-- Main Content-->
     <main>
+        <section id="courses">
+            <h2>Upcoming Beekeeping Courses</h2>
+            <p>Beginner courses run for six weeks on Saturdays from 12pm to 3pm. No previous experience is required and all equipment is provided.</p>
+            <ul class="sold-out">
+                <li>Beginner Course - Six Weeks</li>
+                <li>Start Date: Saturday 21st October 2023</li>
+                <li class="sold">Sold Out</li>
+            </ul>
+            <ul>
+                <li>Beginner Course - Six Weeks</li>
+                <li>Start Date: Saturday 20th January 2024</li>
+                <li>Places Available</li>
+            </ul>
+            <ul>
+                <li>Beginner Course - Six Weeks</li>
+                <li>Start Date: Saturday 2nd March 2024</li>
+                <li>Places Available</li>
+            </ul>
+            <p>Intermediate courses run for eight weeks in the summer months beginning in May and ending in September. You must have previously attended our beginners course or provide
+                evidence of your beekeeping experience with your own hives. All equipment is provided.
+            </p>
+            <ul class="sold-out">
+                <li>Intermediate Course - Ten Weeks</li>
+                <li>Start Date: Saturday 4th May 2024</li>
+                <li class="sold">Sold Out</li>
+            </ul>
+            <ul>
+                <li>Intermediate Course - Ten Weeks</li>
+                <li>Start Date: Saturday 13th July 2024</li>
+                <li>Places Available</li>
+            </ul>
+        
+        </section>
         <section id="why">
-            <h2>Why Be a Beekeeper?</h2>
+            <h2>Why Become a Beekeeper?</h2>
                 <p>Becoming a beekeeper can be a rewarding and fascinating endeavor. Here are some compelling reasons to consider taking up beekeeping:</p>
             <h3>1. Connection with Nature</h3>
                 <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, 
@@ -55,7 +88,7 @@
                     potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
         </section>
         <section>
-            <h2>Sign Up for a Beekeeping Course!</h2>
+            <button>Sign Up for a Beekeeping Course!</button>
         </section>
     </main>
 
