Add content about upcoming courses and style links to form.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     Since 2002, we have been cultivating and caring for a large number of hives and working towards protecting the native Irish honey bee in our area. Beyond the honey jars, we're
                     committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve into the intricate world of bees, appreciating the harmony they bring to our 
                     environment and fostering a sustainable connection with nature.</p>
-                    <img class="about-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
+                    <img class="main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
             </div>
         </section>
         <hr>
