--- a/courses.html
+++ b/courses.html
@@ -34,7 +34,7 @@
         <section id="courses">
             <h2>Upcoming Beekeeping Courses</h2>
             <p>Beginner courses run for six weeks on Saturdays from 12pm to 3pm. No previous experience is required and all equipment is provided.</p>
-            <ul class="sold-out">
+            <ul>
                 <li>Beginner Course - Six Weeks</li>
                 <li>Start Date: Saturday 21st October 2023</li>
                 <li class="sold">Sold Out</li>
@@ -42,17 +42,17 @@
             <ul>
                 <li>Beginner Course - Six Weeks</li>
                 <li>Start Date: Saturday 20th January 2024</li>
-                <li>Places Available</li>
+                <li><a href="form.html" class="available">Places Available</a></li>
             </ul>
             <ul>
                 <li>Beginner Course - Six Weeks</li>
                 <li>Start Date: Saturday 2nd March 2024</li>
-                <li>Places Available</li>
+                <li><a href="form.html" class="available">Places Available</a></li>
             </ul>
             <p>Intermediate courses run for eight weeks in the summer months beginning in May and ending in September. You must have previously attended our beginners course or provide
                 evidence of your beekeeping experience with your own hives. All equipment is provided.
             </p>
-            <ul class="sold-out">
+            <ul>
                 <li>Intermediate Course - Ten Weeks</li>
                 <li>Start Date: Saturday 4th May 2024</li>
                 <li class="sold">Sold Out</li>
@@ -60,29 +60,30 @@
             <ul>
                 <li>Intermediate Course - Ten Weeks</li>
                 <li>Start Date: Saturday 13th July 2024</li>
-                <li>Places Available</li>
+                <li><a href="form.html" class="available">Places Available</a></li>
             </ul>
         
         </section>
+        <hr>
         <section id="why">
             <h2>Why Become a Beekeeper?</h2>
                 <p>Becoming a beekeeper can be a rewarding and fascinating endeavor. Here are some compelling reasons to consider taking up beekeeping:</p>
             <h3>1. Connection with Nature</h3>
                 <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, 
                     and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding experience.</p>
-                <img class="paragraph-images" src="assets/images/bees-hive.jpg" alt="Numerous bees entering a green wooden beehive."/>
+                <img class="main-images" src="assets/images/bees-hive.jpg" alt="Numerous bees entering a green wooden beehive."/>
             <h3>2. Honey Production</h3>
                 <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own honey is not only a delicious reward for your efforts but can
                      also be a source of potential income or a unique gift for friends and family.</p>
-                <img class="paragraph-images" src="assets/images/honeycomb.jpg" alt="A closeup of honeycomb full of honey"/>
+                <img class="main-images" src="assets/images/honeycomb.jpg" alt="A closeup of honeycomb full of honey"/>
             <h3>3. Positive Environmental Impact</h3>
                 <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and flowers. By becoming a beekeeper, you actively participate in 
                     supporting local ecosystems and agriculture. Healthy bee populations are essential for biodiversity and food production.</p>
-                    <img class="paragraph-images" src="assets/images/bees-lavender.jpg" alt="Two bees gathering pollen from purple flowers"/>
+                    <img class="main-images" src="assets/images/bees-lavender.jpg" alt="Two bees gathering pollen from purple flowers"/>
             <h3>4. Relaxation and Stress Relief</h3>
                 <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention 
                     required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                    <img class="paragraph-images" src="assets/images/single-beekeeper.jpg" alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
+                    <img class="main-images" src="assets/images/single-beekeeper.jpg" alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
             <h3>But...</h3>
                 <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and 
                     potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
