Add and style button that links to form.html

--- a/courses.html
+++ b/courses.html
@@ -37,16 +37,19 @@
             <ul>
                 <li>Beginner Course - Six Weeks</li>
                 <li>Start Date: Saturday 21st October 2023</li>
+                <li>€85</li>
                 <li class="sold">Sold Out</li>
             </ul>
             <ul>
                 <li>Beginner Course - Six Weeks</li>
                 <li>Start Date: Saturday 20th January 2024</li>
+                <li>€85</li>
                 <li><a href="form.html" class="available">Places Available</a></li>
             </ul>
             <ul>
                 <li>Beginner Course - Six Weeks</li>
                 <li>Start Date: Saturday 2nd March 2024</li>
+                <li>€85</li>
                 <li><a href="form.html" class="available">Places Available</a></li>
             </ul>
             <p>Intermediate courses run for eight weeks in the summer months beginning in May and ending in September. You must have previously attended our beginners course or provide
@@ -55,11 +58,13 @@
             <ul>
                 <li>Intermediate Course - Ten Weeks</li>
                 <li>Start Date: Saturday 4th May 2024</li>
+                <li>€175</li>
                 <li class="sold">Sold Out</li>
             </ul>
             <ul>
                 <li>Intermediate Course - Ten Weeks</li>
                 <li>Start Date: Saturday 13th July 2024</li>
+                <li>€175</li>
                 <li><a href="form.html" class="available">Places Available</a></li>
             </ul>
         
@@ -88,9 +93,9 @@
                 <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and 
                     potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
         </section>
-        <section>
-            <button>Sign Up for a Beekeeping Course!</button>
-        </section>
+        <div id="sign-up-button">
+            <p>Sign Up for a Beekeeping Course!</p>
+        </div>
     </main>
 
     <!-- Footer Content -->
