Add remaining text content and images for products

--- a/shop.html
+++ b/shop.html
@@ -32,12 +32,16 @@
     <!-- Main Content-->
     <main>
         <section id="shop">
-            <h2>Shop</h2>
-            <p>To keep our costs low, all orders and payments are taken over the phone. Please call us to place your order for collection or delivery. 
-            Use your beginner course certificate number for a once-off 10% discount on purchases from our shop. Please note we only offer delivery 
-            to the Republic of Ireland and to Northern Ireland.</p>
-            <hr>
             <div>
+                <h2>Shop</h2>
+                <p>To keep our costs low, all payments are taken over the phone. Please email or call us to place your order for collection or delivery. 
+                Use your beginner course certificate number for a once-off 10% discount on purchases from our shop. Please note we only offer delivery 
+                to the Republic of Ireland and to Northern Ireland.</p>
+                <p>Contact number: <a href="tel:021-12345678">021 12345678</a></p>
+                <p>Email: <a href="mailto:info@corkbeekeeping.ie">info@corkbeekeeping.ie</a></p>
+            </div>
+            <hr>
+            <div class="products">
                 <h3>Beekeeper Suit</h3>
                 <ul>
                     <li>Unisex three layer suit with gloves and mesh veil.</li>
@@ -46,32 +50,32 @@
                 </ul>
                 <img class="shop-img" src="assets/images/beekeeper-suit-sq.png" alt="White beekeeping suit with protective gloves and veil.">
             </div>
-            <div>
-                <img class="main-images" src="assets/images/beekeeper-suit-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+            <div class="products">
                 <h3>Wooden Beehive - Starter Kit</h3>
                 <ul>
                     <li>5 frame wooden beehive with 10 sheets of honeycomb.</li>
                     <li>Size: 600L x 450W x 1500H mm</li>
                     <li>€325</li>
                 </ul>
+                <img class="shop-img" src="assets/images/colourful-beehives-sq.png" alt="White beekeeping suit with protective gloves and veil.">
             </div>
-            <div>
-                <img class="main-images" src="assets/images/beekeeper-suit-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+            <div class="products">
                 <h3>Smoker</h3>
                 <ul>
-                    <li>Unisex three layer suit with gloves and mesh veil.</li>
-                    <li>Sizes: Small - Medium - Large</li>
+                    <li>Stainless steel smoker with hand bellows</li>
+                    <li>Size: 170mm height</li>
                     <li>€25</li>
                 </ul>
+                <img class="shop-img" src="assets/images/smoker-sq.png" alt="White beekeeping suit with protective gloves and veil.">
             </div>
-            <div>
-                <img class="main-images" src="assets/images/beekeeper-suit-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+            <div class="products">
                 <h3>Glass Jars 400ml - box of 10</h3>
                 <ul>
-                    <li>Unisex three layer suit with gloves and mesh veil.</li>
-                    <li>Sizes: Small - Medium - Large</li>
+                    <li>Glass jars with screw-top metal lids.</li>
+                    <li>Set of 10 labels included.</li>
                     <li>€15</li>
                 </ul>
+                <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="White beekeeping suit with protective gloves and veil.">
             </div>
             
         
