Add section to index.html about honey bees

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             </div>
         </section>
         <hr>
+        <section id="about-bees">
+            <h2>The Irish Honey Bee</h2>
+            <p>Placeholder text</p>
+        </section>
+        <hr>
         <section id="short-descriptions">
             <div class="invite">
                 <h3>Beekeeping Courses</h3>
