Add honey product

--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,6 @@
     <!-- Main Content-->
     <main>
         <section id="shop">
-            <div>
                 <h2>Shop</h2>
                 <p>To keep our costs low, all payments are taken over the phone. Please email or call us to place your order for collection or delivery. 
                 Use your beginner course certificate number for a once-off 10% discount on purchases from our shop. Please note we only offer delivery 
@@ -41,6 +40,15 @@
                 <p>Email: <a href="mailto:info@corkbeekeeping.ie">info@corkbeekeeping.ie</a></p>
             </div>
             <hr>
+            <div class="products">
+                <h3>West Cork Honey</h3>
+                <ul>
+                    <li>400ml jars of either solid or runny honey.</li>
+                    <li>€7 each</li>
+                    <li>3 jars for €20</li>
+                </ul>
+                <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+            </div>
             <div class="products">
                 <h3>Beekeeper Suit</h3>
                 <ul>
@@ -75,7 +83,7 @@
                     <li>Set of 10 labels included.</li>
                     <li>€15</li>
                 </ul>
-                <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="White beekeeping suit with protective gloves and veil.">
             </div>
             
         
