Add form.html and inital input fields

--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>West Cork Bees</title>
+    <title>West Cork Bees | Shop</title>
     <!-- Favicon Links -->
 
 </head>
