Fix incorrent for-id names in form elements

--- a/form.html
+++ b/form.html
@@ -40,37 +40,37 @@
                     <legend>Your Details</legend>
                     <div>
                         <label for="name">Name: </label>
-                        <input type="text" name="name" name="name" placeholder="*Required" required>
+                        <input type="text" name="name" id="name" autocomplete='on' placeholder="*Required" required>
                     </div>
                     <div>
                         <label for="email">Email: </label>
-                        <input type="email" name="email" name="email" placeholder="*Required" required>
+                        <input type="email" name="email" id="email" autocomplete='on' placeholder="*Required" required>
                     </div>
                     <div>
                         <label for="phone">Phone Number: </label>
-                        <input type="number" name="phone" name="phone" placeholder="*Required" required>
+                        <input type="tel" name="phone" id="phone" autocomplete='on' placeholder="*Required" required>
                     </div>
                     <div>
                         <label for="age">Date of Birth: </label>
-                        <input type="date" name="age" name="age" max="2005-12-07" required>
+                        <input type="date" name="age" id="age" max="2005-12-07" required>
                     </div>
                 </fieldset>
                 <fieldset class="details-boxes courses-radio" id="course-details">
                     <legend>Beginner Courses</legend>
                     <div>
                         <input type='radio' name="course-level" id="beginner240120" value="beginner240120" checked>
-                        <label for="course-level">Saturday 20th Jan 2024</label>
+                        <label for="beginner240120">Saturday 20th Jan 2024</label>
                     </div>
                     <div>
                         <input type='radio' name="course-level" id="beginner240032" value="beginner240302">
-                        <label for="course-level">Saturday 2nd March 2024</label>
+                        <label for="beginner240032">Saturday 2nd March 2024</label>
                     </div>
                 </fieldset>   
                 <fieldset class="details-boxes courses-radio">
                     <legend>Intermediate Courses</legend>
                     <div>    
                         <input type='radio' name="course-level" id="intermediate240713" value="intermediate240713">
-                        <label for="course-level">Saturday 13th July 2024</label>
+                        <label for="intermediate240713">Saturday 13th July 2024</label>
                     </div>
                 </fieldset>
                 <div>
