--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     by our passionate beekeeping team. <span class='mobile'>Tap the image above to learn more.</span></p>
             </div>
         </section>
-        
+        <div id="sign-up-button">
+            <a href="form.html">Sign Up for a Beekeeping Course!</a>
+        </div>
     </main>
 
     <!-- Footer Content -->
